tests/samples/negative/functions/lambda_capture_default_duplicate.ax
module lambda_capture_default_duplicate;

fn main() -> i32 {
    let base: i32 = 1;
    let add = [=, &](value: i32) -> i32 => value + base;
    return add(1);
}
